WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129225
Subpixel rendering: Fix bleed avoidance subpixel calculation.
https://bugs.webkit.org/show_bug.cgi?id=129225
Summary
Subpixel rendering: Fix bleed avoidance subpixel calculation.
alan
Reported
2014-02-22 20:49:30 PST
static_cast<LayoutUnit> (mostly) produces undesired result.
Attachments
Patch
(8.85 KB, patch)
2014-02-22 21:38 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-02-22 21:38:40 PST
Created
attachment 224994
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-23 08:20:20 PST
Comment on
attachment 224994
[details]
Patch Clearing flags on attachment: 224994 Committed
r164556
: <
http://trac.webkit.org/changeset/164556
>
WebKit Commit Bot
Comment 3
2014-02-23 08:20:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug