Subpixel rendering: Fix bleed avoidance subpixel calculation. https://bugs.webkit.org/show_bug.cgi?id=129225

Reviewed by Simon Fraser.

static_cast<LayoutUnit>(int value) only produces the desired result when subpixel is off.

Currently not testable.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::getBackgroundRoundedRect):
(WebCore::shrinkRectByOneDevicePixel):
(WebCore::RenderBoxModelObject::borderInnerRectAdjustedForBleedAvoidance):
(WebCore::RenderBoxModelObject::backgroundRoundedRectAdjustedForBleedAvoidance):
(WebCore::RenderBoxModelObject::paintFillLayerExtended):
* rendering/RenderBoxModelObject.h:


Canonical link: https://commits.webkit.org/147264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164556 268f45cc-cd09-0410-ab3c-d52691b4dbfc